--- a/style.css
+++ b/style.css
@@ -3,36 +3,50 @@ body, html {
     margin: 0%;
     font-size: 100%;
     font-weight: normal;
+    
 }
 
-body{ font-size: 62%;
+body{ font-size: 50%;
+}
+
+body {
+    background: linear-gradient(rgba(95,144,195, .7), rgba(155,35,23, .5)),
+    url(./img/los\ 3.jpg);
+    background-size: cover;
+    background-position: center;
+    
+    
 }
 h1{ font: bold 2.4em verdana, sans-serif;
     background: -moz-linear-gradient(top, aqua,pink);
     background: -webkit-linear-gradient(top, aqua,pink);
-    width: 35%; border-radius: 20px; 
-   margin: 15px auto; text-align: center; padding: 15px;
+    width: 40%; border-radius: 20px; 
+   margin: 20px auto; text-align: center; padding: 5px;
    box-shadow: blueviolet 5px 5px 10px;
    color: blue; text-shadow: blueviolet 2px 2px 3px;}
 
-h2 { font: bold 1.5em verdana, sans-serif;
-    margin: 0%; padding: 5px 0 5px 0px;
-    color: black;
+h2 p{ font: bold 0.6em verdana, sans-serif;
+    margin: 0.5%; padding: 50px 0px 5px 0px;
+    color: white;
+    
+    
+    
 }   
 
 section{ width: 91%;
     border-top: 1px dashed gray;
-    margin: 15px auto;
+    margin: 30px auto;
 }
 figure{ float: left;
     
 }
 
 figure img{ padding: 4px;
-    background-color: green;
+    background-color: aqua;
     border-radius: 20px;
     -webkit-transition: -webkit-transform 0.3s ease-in-out 0.1s;
     box-shadow: gray 5px 5px 5px;
+    margin-top: 20px; margin-left: 10px;
 
 }
 
@@ -49,7 +63,7 @@ figure img:hover{
 footer p{
     clear: both; padding-top: 650px;
     font-family: georgia;
-    font-size: 1.4em;
+    font-size: 1em;
     margin: 10px 8px;
     color: gray;
 
@@ -57,9 +71,19 @@ footer p{
 figcaption{ font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
     text-align: center;
-    margin-top: 5px;}
-
-body{ background: linear-gradient(rgba(95,114,190, .5), rgba(155,35,234, .5));
-    
-    
+    margin-top: 5px;
+    color: white;
 }
+    
+ 
+    form{
+        margin-right:83%;
+        margin-left: 5px;
+        margin-bottom: 10px;
+    }
+
+    a .fab {
+        color: white;
+        font-size: 30px;
+        margin: 0 15px;
+    }
