--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body, html {
-    padding: 0%;
+    padding:0%;
     margin: 0%;
-    font-size: 100%;
-    font-weight: normal;
+    font-size:cover;
+    font-weight:normal;
     
 }
 
@@ -12,8 +12,11 @@ body{ font-size: 50%;
 body {
     background: linear-gradient(rgba(95,144,195, .7), rgba(155,35,23, .5)),
     url(./img/los\ 3.jpg);
-    background-size: cover;
+    background-size:300%;
     background-position: center;
+    padding-top: 0px;
+    
+
     
     
 }
@@ -50,10 +53,11 @@ figure img{ padding: 4px;
 
 }
 
-figure img:hover{ 
-    -moz-transform: scale(1.2);
+figure img:hover { 
+    transform: scale(1.2);
+   
 
-    -webkit-transform: scale(1.2);
+    
     
 
                  
@@ -61,13 +65,14 @@ figure img:hover{
 
  
 footer p{
-    clear: both; padding-top: 650px;
+    background-color:rgba(245, 245, 245, 0.938);
+    clear: both; padding-top: 50px;
     font-family: georgia;
     font-size: 1em;
     margin: 10px 8px;
     color: black;
-
-}
+     margin-top: 1440px;
+} 
 figcaption{ font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
     text-align: center;
@@ -87,3 +92,5 @@ figcaption{ font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
         margin: 0 15px;
     }
+
+    
